Bug 1034171: Introduce the commits tab and restrict operations to the squashed review request. r=smacleod.
No edits should be made directly onto review requests. The only changes
that can be made are either via pushing (this will set the description,
commit IDs, repository, etc), and via the special RBMozUI view that allows
for batch assignment of reviewers and batch publishing.

Also, we only apply RBMozUI to pushed review requests.
Also, we set the reviewers on the squashed review request to be the union of the child reviewers.

--HG--
extra : rebase_source : 65687532bb63378a2f4bfd62111ef942a5a4d065
extra : histedit_source : acd085134f551c43be8b3a383f578c2cd8d1e69d

--- a/pylib/rbmozui/rbmozui/static/css/review.less
+++ b/pylib/rbmozui/rbmozui/static/css/review.less
@@ -22,3 +22,22 @@
     }
   }
 }
+
+#draft-banner {
+  cursor: pointer;
+
+  #btn-draft-publish,
+  #btn-draft-discard,
+  #field_changedescription,
+  p {
+    display: none;
+  }
+}
+
+#discard-banner {
+  #btn-review-request-reopen,
+  #field_changedescription,
+  p {
+    display: none;
+  }
+}
